--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -123,8 +123,16 @@ body,
 
   display: flex;
   flex-direction: row;
+  
+  justify-content: space-between;
+}
+
+.menu-item-view {
+  display: flex;
+  flex-direction: row;
 
   gap: 20px;
+
 }
 
 .menu-item {
@@ -148,4 +156,66 @@ body,
 
   color: white;
     border-bottom: 3px solid white;
+}
+//
+// beer.tsx ****************************************************************************************************
+//
+.beer-container {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
+  align-items: center;
+
+
+}
+
+.beer-container2 {
+  min-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
+  align-items: center;
+
+  gap: 10px;
+
+}
+
+.loading-container {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.beer-item {
+  width: 550px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  border-radius: 10px;
+  padding: 10px;
+  gap: 10px;
+  background-color: white;
+  
+
+  img {
+    width: 100px;
+    height: 100px;
+
+    object-fit: contain;
+  }
+}
+
+.beer-item-info {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
