UI 및 코드 리팩토링

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@ $header-hover-background-color: #424254;
 $header-button-text-color: #9aa4af;
 $header-border-color: #4171d6;
 $menu-item-text-color: #b3cdff;
+
 //
 // 기본 스타일 ****************************************************************************************************
 //
@@ -36,6 +37,7 @@ body,
 #root {
   height: 100%;
 }
+
 //
 // 헤더 스타일 ****************************************************************************************************
 //
@@ -43,23 +45,24 @@ body,
   min-width: 1200px;
   width: 100%;
   height: 50px;
-  
+
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   padding: 5px 15px;
 
-  
+
   background-color: $header-background-color;
-  
-  }
-  
-.header-view {
-    color: white;
-    font-weight: bold;
-    font-size: 1rem;
+
 }
+
+.header-view {
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
 //
 // 다크 모드 버튼 스타일 ****************************************************************************************************
 //
@@ -73,11 +76,13 @@ body,
 
   border-radius: 5px;
   color: $header-button-text-color;
+
   &:hover {
-      background-color: $header-hover-background-color;
-      color: white;
+    background-color: $header-hover-background-color;
+    color: white;
   }
 }
+
 //
 // Home.tsx ****************************************************************************************************
 //
@@ -123,8 +128,6 @@ body,
 
   display: flex;
   flex-direction: row;
-  
-  justify-content: space-between;
 }
 
 .menu-item-view {
@@ -155,8 +158,18 @@ body,
   @extend .menu-item;
 
   color: white;
-    border-bottom: 3px solid white;
+  border-bottom: 3px solid white;
 }
+
+.menu-other-view {
+  height: 100%;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
 //
 // beer.tsx ****************************************************************************************************
 //
@@ -203,7 +216,7 @@ body,
   padding: 10px;
   gap: 10px;
   background-color: white;
-  
+
 
   img {
     width: 100px;
