--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -95,12 +95,15 @@ body,
 }
 
 .outlet-container {
+  min-width: 1200px;
+  width: 100%;
+
   display: flex;
   flex: 1;
   flex-direction: column;
+  align-items: center;
 
   padding: 15px;
-
 }
 
 //
@@ -174,14 +177,13 @@ body,
 // beer.tsx ****************************************************************************************************
 //
 .beer-container {
-  width: 100%;
+  width: 1200px;
 
   display: flex;
   flex-direction: column;
   flex: 1;
 
   align-items: center;
-
 
 }
 
@@ -191,7 +193,7 @@ body,
   flex-direction: column;
   flex: 1;
 
-  align-items: center;
+  padding: 10px;
 
   gap: 10px;
 
